# deku

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  release-plz.toml  release.toml
.github/: FUNDING.yml  dependabot.yml
.github/actions-rs/: grcov.yml
.github/workflows/: coverage.yml  main.yml  pull_request.yml  release-plz.yml
benches/: deku.rs
deku-derive/: Cargo.toml  README.md
deku-derive/src/: lib.rs
deku-derive/src/helpers/: meta_iterator_helpers.rs  mod.rs
deku-derive/src/macros/: deku_read.rs  deku_size.rs  deku_write.rs  mod.rs
ensure_no_std/: Cargo.toml
ensure_no_std/src/: lib.rs  main.rs  no_alloc_imports.rs  with_alloc_imports.rs
ensure_wasm/: Cargo.toml  README.md  index.html
ensure_wasm/src/: lib.rs
ensure_wasm/tests/: deku.rs
examples/: 80211.rs  cpio.rs  custom_reader.rs  custom_reader_and_writer.rs  deku_input.rs  enums.rs  enums_catch_all.rs  example.rs  ieee.rs  ipv4.rs  many.rs  read_all.rs  temp.rs  update.rs
src/: attributes.rs  container.rs  ctx.rs  error.rs  lib.rs  noseek.rs  prelude.rs  reader.rs  slice_impls.rs  writer.rs
src/impls/: arc.rs  bool.rs  boxed.rs  cow.rs  cstring.rs  hashmap.rs  hashset.rs  ipaddr.rs  mod.rs  nonzero.rs  option.rs  primitive.rs  slice.rs  tuple.rs  unit.rs  vec.rs
tests/: bit_order.rs  mod.rs  test_alloc.rs  test_as.rs  test_bit_container_size.rs  test_box.rs  test_catch_all.rs  test_cstring.rs  test_deku_id.rs  test_enum.rs  test_from_bytes.rs  test_from_reader.rs  test_generic.rs  test_lsb_le.rs  test_macro.rs  test_magic.rs  test_own_impl.rs  test_regression.rs  test_seek.rs  test_size.rs  test_struct.rs  test_to_bits.rs  test_to_slice.rs  test_tuple.rs
tests/macro_read/: bits_bytes_conflict.rs  bits_bytes_conflict.stderr  ctx_validation.rs  enum_validation.rs  enum_validation.stderr  enum_without_id_type.rs  enum_without_id_type.stderr  unknown_attribute.rs  unknown_attribute.stderr  unknown_endian.rs  unknown_endian.stderr  variant_id_id_pat_conflict.rs  variant_id_id_pat_conflict.stderr
tests/test_attributes/: mod.rs  test_aligned.rs  test_assert.rs  test_assert_eq.rs  test_bitfield_values_range_check.rs  test_bound.rs  test_cond.rs  test_count.rs  test_ctx.rs  test_map.rs  test_signed_bitfield_values.rs  test_skip.rs  test_skip_bits.rs  test_skip_bytes.rs  test_temp.rs  test_temp_value_with_cond.rs  test_update.rs
tests/test_attributes/test_limits/: mod.rs  test_bits_read.rs  test_bytes_read.rs  test_count.rs  test_read_all.rs  test_until.rs
tests/test_attributes/test_padding/: mod.rs  test_pad_bits_after.rs  test_pad_bits_before.rs  test_pad_bytes_after.rs  test_pad_bytes_before.rs
tests/test_attributes/test_vec_limits/: mod.rs  test_bits_read.rs  test_bytes_read.rs  test_until.rs
tests/test_common/: mod.rs
tests/test_compile/: mod.rs
tests/test_compile/cases/: attribute_token_stream.rs  attribute_token_stream.stderr  bits_bytes_conflict.rs  bits_bytes_conflict.stderr  catch_all_multiple.rs  catch_all_multiple.stderr  count_read_conflict.rs  count_read_conflict.stderr  ctx_validation.stderr  deku_size_seek_enum.rs  deku_size_seek_enum.stderr  deku_size_seek_field.rs  deku_size_seek_field.stderr  deku_size_seek_struct.rs  deku_size_seek_struct.stderr  deku_size_vec.rs  deku_size_vec.stderr  enum_validation.rs  enum_validation.stderr  id_arbitrary_enum_discriminant.stderr  internal_variables.rs  internal_variables.stderr  no_deku_id_generic_enum.rs  no_deku_id_generic_enum.stderr  seek_conflict.rs  seek_conflict.stderr  skip_empty_arg.rs  skip_empty_arg.stderr  skip_invalid_arg.rs  skip_invalid_arg.stderr  temp_field.rs  temp_field.stderr  unknown_endian.rs  unknown_endian.stderr
tests/test_compile/pass_cases/: no_prelude.rs
