[package]
authors = ["sharks <sharks@sharks>"]
edition = "2021"
name = "deku"
version = "0.17.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sharksforarms/deku"
keywords = ["deku", "bits", "serialization", "deserialization", "struct"]
categories = ["encoding", "parsing", "no-std"]
description = "bit level serialization/deserialization proc-macro for structs"
readme = "README.md"
rust-version = "1.71"

[lib]
bench = false

[workspace]
members = [
    "deku-derive"
]

[features]
default = ["std"]
std = ["deku_derive/std", "bitvec/std", "alloc", "no_std_io/std"]
alloc = ["bitvec/alloc"]
logging = ["deku_derive/logging", "log"]
no-assert-string = ["deku_derive/no-assert-string"]

[dependencies]
deku_derive = { version = "^0.17.0", path = "deku-derive", default-features = false}
bitvec = { version = "1.0.1", default-features = false }
log = { version = "0.4.21", optional = true }
no_std_io = { version = "0.6.0", default-features = false, features = ["alloc"] }
rustversion = "1.0.16"

[dev-dependencies]
rstest = "0.21.0"
hexlit = "0.5.5"
criterion = "0.5.1"
alloc_counter = "0.0.4"
trybuild = "1.0.95"
rustc-hash = "1.1.0"
env_logger = "0.11.3"
assert_hex = "0.4.1"

[[bench]]
name = "deku"
harness = false

[lints]
workspace = true

[workspace.lints.clippy]
# Triggers in macro generated code of darling
# https://github.com/rust-lang/rust-clippy/issues/12643
manual-unwrap-or-default = "allow"
