[package]
authors = ["sharks <sharks@sharks>"]
edition = "2021"
name = "deku"
version = "0.20.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sharksforarms/deku"
keywords = ["deku", "bits", "serialization", "deserialization", "struct"]
categories = ["encoding", "parsing", "no-std"]
description = "bit level serialization/deserialization proc-macro for structs"
readme = "README.md"
rust-version = "1.81"

[lib]
bench = false

[workspace]
members = [
    "deku-derive"
]

[features]
default = ["std", "bits", "descriptive-errors"]
std = ["deku_derive/std", "bitvec?/std", "alloc", "no_std_io/std"]
alloc = ["bitvec?/alloc", "deku_derive/alloc", "no_std_io/alloc" ]
logging = ["deku_derive/logging", "log"]
bits = ["dep:bitvec", "deku_derive/bits", "alloc" ]
descriptive-errors = ["alloc"]

[dependencies]
deku_derive = { version = "^0.20.1", path = "deku-derive", default-features = false}
bitvec = { version = "1.0.1", default-features = false, optional = true }
log = { version = "0.4.28", optional = true }
no_std_io = { version = "0.9.1", default-features = false, package = "no_std_io2" }
rustversion = "1.0.22"

[dev-dependencies]
rstest = "0.26.1"
hexlit = "0.5.5"
criterion = "0.7.0"
alloc_counter = "0.0.4"
trybuild = "1.0.112"
rustc-hash = "=2.1.1"
env_logger = "0.11.8"
assert_hex = "0.4.1"
log = { version = "0.4.28" }

[[bench]]
name = "deku"
harness = false
required-features = ["alloc"]

[lints]
workspace = true

[workspace.lints.clippy]
# Triggers in macro generated code of darling
# https://github.com/rust-lang/rust-clippy/issues/12643
manual-unwrap-or-default = "allow"

[[example]]
name = "custom_reader_and_writer"
required-features = ["bits"]

[[example]]
name = "deku_input"
required-features = ["std"]

[[example]]
name = "enums_catch_all"
required-features = ["bits"]

[[example]]
name = "enums"
required-features = ["std"]

[[example]]
name = "example"
required-features = ["bits"]

[[example]]
name = "ipv4"
required-features = ["bits"]

[[example]]
name = "80211"
required-features = ["bits"]

[[example]]
name = "many"
required-features = ["std"]

[[example]]
name = "read_all"
required-features = ["std"]
