[package]
authors = ["sharks <sharks@sharks>"]
edition = "2018"
name = "deku_derive"
version = "0.16.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sharksforarms/deku"
description = "bit level serialization/deserialization proc-macro for structs"
readme = "../README.md"

[lib]
proc-macro = true

[features]
std = ["proc-macro-crate"]
logging = []

[dependencies]
quote = "1.0"
syn = "1.0"
# extra-traits gives us Debug
# syn = {version = "1.0", features = ["extra-traits"]}
proc-macro2 = "1.0"
darling = "0.14"
proc-macro-crate = { version = "2.0.1", optional = true }

[dev-dependencies]
rstest = "0.16"
