[package]
authors = ["sharks <sharks@sharks>"]
edition = "2021"
name = "deku_derive"
version = "0.18.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sharksforarms/deku"
description = "bit level serialization/deserialization proc-macro for structs"
readme = "../README.md"
rust-version = "1.81"

[lib]
proc-macro = true

[features]
std = ["proc-macro-crate"]
logging = []
no-assert-string = []
bits = []

[dependencies]
quote = "1.0"
syn = "2.0"
# extra-traits gives us Debug
# syn = {version = "1.0", features = ["extra-traits"]}
proc-macro2 = "1.0"
darling = "0.20"
proc-macro-crate = { version = "3.2.0", optional = true }

[dev-dependencies]
rstest = "0.25"

[lints]
workspace = true
