[package]
name = "ensure_no_std"
version = "0.1.0"
authors = ["sharks <sharks@sharks>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[workspace]


[features]
default = ["alloc"]
alloc = []

[dependencies]
cortex-m-rt = "0.7.3"
deku = { path = "../", default-features = false, features = ["alloc", "bits"] }
embedded-alloc = "0.6.0"

