[package]
name = "ensure_no_std"
version = "0.1.0"
authors = ["sharks <sharks@sharks>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[workspace]

[lib]
name = "no_std_lib"
path = "src/lib.rs"

[[bin]]
name = "ensure_no_std"
path = "src/main.rs"

[features]
default = ["alloc", "deku/alloc", "deku/bits" ]
alloc = []

[dependencies]
cortex-m-rt = "0.7.3"
deku = { path = "../", default-features = false }
embedded-alloc = "0.6.0"

